  * if an organisation has multiple identifiers, then append the host name of that id

- app/views/branded/home/index.html.erb

  changed width of signin panel to give it more space

- config/initializers/_dmproadmap_ugent.rb

  overrides settings config/initializers/_dmproadmap.rb

  that _dmproadmap.rb is included in git,
  which makes it hard to configure it at the server

- config/initializers/devise_ugent.rb

  overrides settings from config/initializers/devise.rb

- config/initializers/contact_us.rb

  not included in .gitigore,
  and expected by roadmap to set (contact_us.rb.example not used)

- config/routes/*.rb

  add extra routes

  in order to load to extra files,
  I had to edit config/application.rb!

- app/views/branded/plans/index.html.erb

  overrides app/views/plans/index.html.erb

  reason: * override text above plans (switch to other user account)
          * hide link "Create plan" if user is not allowed to create plans (guest users)

- app/views/branded/orgs/admin_edit.html.erb

  overrides app/views/orgs/admin_edit.html.erb

  reason: disable tab schools/departments

- app/views/branded/plans/_share_form.html.erb

  edit section where you can set the visibility
  of the plan. In the upstream version you can set:
  * privately visible (default)
  * organisationally visible
  * publicly visible

  we removed the radio button to set "publicy visible"

  anyway, one can only change these if 50% of all questions are answered

  adds extra sentence: "Collaborators with permissions "co-owner" and "editor" will be mentioned as "principal investigator" and "project administrator" respectively on the plan"

  sets html flag "required=true" for fields email and access. Without this,
    the method roles_controller.rb#create crashes

    see PR https://github.com/DMPRoadmap/roadmap/pull/2874 where those html flags are also added

- app/views/branded/layouts/_navigation.html.erb

  disable link to page /public_plans